update: trip cache seat and ticket generation